src/test/ui/span/missing-unit-argument.stderr
error[E0061]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/missing-unit-argument.rs:11:33
   |
LL |     let _: Result<(), String> = Ok();
   |                                 ^^^^
help: expected the unit value `()`; create it with empty parentheses
   |
LL |     let _: Result<(), String> = Ok(());
   |                                    ^^

error[E0061]: this function takes 2 parameters but 0 parameters were supplied
  --> $DIR/missing-unit-argument.rs:12:5
   |
LL | fn foo(():(), ():()) {}
   | -------------------- defined here
...
LL |     foo();
   |     ^^^^^ expected 2 parameters

error[E0061]: this function takes 2 parameters but 1 parameter was supplied
  --> $DIR/missing-unit-argument.rs:13:5
   |
LL | fn foo(():(), ():()) {}
   | -------------------- defined here
...
LL |     foo(());
   |     ^^^^^^^ expected 2 parameters

error[E0061]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/missing-unit-argument.rs:14:5
   |
LL | fn bar(():()) {}
   | ------------- defined here
...
LL |     bar();
   |     ^^^^^
help: expected the unit value `()`; create it with empty parentheses
   |
LL |     bar(());
   |         ^^

error[E0061]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/missing-unit-argument.rs:15:7
   |
LL |     fn baz(self, (): ()) { }
   |     -------------------- defined here
...
LL |     S.baz();
   |       ^^^
help: expected the unit value `()`; create it with empty parentheses
   |
LL |     S.baz(());
   |           ^^

error[E0061]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/missing-unit-argument.rs:16:7
   |
LL |     fn generic<T>(self, _: T) { }
   |     ------------------------- defined here
...
LL |     S.generic::<()>();
   |       ^^^^^^^
help: expected the unit value `()`; create it with empty parentheses
   |
LL |     S.generic::<()>(());
   |                     ^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0061`.
